syntax = "proto3";

message Event {
   enum Type {
      HTTP = 0;
      DATABASE = 1;
      SCHEDULE = 3;
      FIREHOSE = 4;
   }

   message Target {
      string cwd = 1;
      string handler = 2;
   }
   
   string id = 1;
   Type type = 2;
   Target target = 3;

   message Pop {
     string id = 1;
   }
}



service EventQueue {
   rpc pop(Event.Pop) returns (Event);
}
